# schema-bridge

./: .gitignore  README.md  TODO.md  pyproject.toml  pyrightconfig.json  pytest.ini
src/schema_bridge/: __init__.py  cli.py  cli_helpers.py  ingest_cli.py  logging.py  rdf.py
src/schema_bridge/graphql/: __init__.py  client.py
src/schema_bridge/pipeline/: __init__.py  export.py  graphql.py  ingest.py  mapping.py  orchestrate.py  profiles.py  rml.py  shacl.py  sparql.py
src/schema_bridge/profiles/: __init__.py  loader.py
src/schema_bridge/rdf/: __init__.py  export.py  mapping.py  shacl.py  sparql.py
src/schema_bridge/resources/: README.md  __init__.py  loader.py
src/schema_bridge/resources/graphql/: dcat_all_resources.graphql  health_dcat_ap.graphql  health_ri_core_v2.graphql  resources.graphql  resources_detail.graphql  variables.graphql
src/schema_bridge/resources/profiles/: dcat-all-attributes.yml  dcat.yml  (+5 more)
src/schema_bridge/workflows/: __init__.py  export.py  ingest.py  materialize.py
tests/: conftest.py  test_cli_integration.py  test_demo_smoke.py  test_graphql.py  test_pipeline.py  test_profiles.py  test_rdf_export_jsonld.py  test_readme_examples.py  test_resources_loader.py
tests/resources/: graphql_dcat_all_resources.json  graphql_health_dcat_ap.json  graphql_health_dcat_ap_molgenis.json  graphql_health_ri_core_v2.json  graphql_minimal.json  graphql_resources.json  mapping.yml
tests/resources/ingest/: profile.yml
tests/resources/minimal/: profile.yml
tests/resources/rml/: mapping.rml.ttl
tests/resources/rml_pkg/: airport_mapping.rml.ttl
(+53 files in other folders)
